--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -262,3 +262,9 @@ body {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.error-message{
+  color: red;
+  font-size: 0.75rem;
+  display: none;
+}
