--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>otp Page</title>
     <link rel="stylesheet" href="/styles/auth.css" />
+</head>
 
 <body>
     <div class="main-container">
 
-        </head>
+
 
         <div class="auth-container">
             <img src="/img/arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="back-arrow" class="back-arrow" />
             <h1 class="otp-title">Verify With Your Email</h1>
             <p class="otp-subtitle">
                 The One-Time Password sends to the Account
-                <span class="highlight-email">abc123@gmail.com</span>. please Enter your OTP.
+                <span class="highlight-email">
+                    <%= email %>
+                </span>. please Enter your OTP.
             </p>
 
             <form action="/otp" method="POST" class="auth-form">
-
+                <input type="hidden" name="email" value="<%= email %>">
                 <input type="number" class="otp-field" placeholder="ENTER OTP" maxlength="6"
                     oninput="if(this.value.length > 6) this.value = this.value.slice(0,6);" />
 
@@ -32,7 +35,10 @@
                 </div>
             </form>
             <div class="resend-otp">
-                <a href="#" class="resendLink" onclick="resendOtp()">Resend OTP</a>
+                <form action="/resend-otp" method="POST" >
+                     <input type="hidden" name="email" value="<%= email %>">
+                    <button id="resendBtn" class="resendButton" type="submit" disabled>Resend OTP </button>
+                </form>
                 <span id="timer"> in 00:30</span>
             </div>
 
@@ -40,6 +46,38 @@
 
         </div>
     </div>
+    <script>
+
+        let duration = 30
+        const btn = document.getElementById('resendBtn')
+        const timerSpan = document.getElementById('timer')
+
+        let endTime = localStorage.getItem('otpEndTime')
+
+        if (!endTime || Date.now() > endTime) {
+            endTime = Date.now() + duration * 1000;
+            localStorage.setItem("otpEndTime", endTime);
+        }
+
+        function updateTimer() {
+            let remaining = Math.floor((endTime - Date.now()) / 1000);
+
+            if (remaining > 0) {
+                btn.disabled = true;
+                timerSpan.textContent = " in 00:" + (remaining < 10 ? "0" : "") + remaining;
+            } else {
+                btn.disabled = false;
+                timerSpan.textContent = "";
+                clearInterval(countDown);
+                localStorage.removeItem("otpEndTime");
+            }
+        }
+
+        updateTimer();
+        let countDown = setInterval(updateTimer, 1000);
+
+
+    </script>
 </body>
 
 </html>
