--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reset Password</title>
-    <link rel="stylesheet" href="/styles/auth.css" />
-  </head>
-  <body>
-    <div class="main-container">
-      <div class="auth-container">
- 
-        <h1 class="auth-title">Reset Password</h1>
-        <p class="auth-subtitle">Enter the OTP and your new password</p>
 
-        <form action="/reset-password" method="POST" class="auth-form">
-           <input type="number" class="reset-passowrd-otp" placeholder="ENTER OTP" maxlength="6"
-                    oninput="if(this.value.length > 6) this.value = this.value.slice(0,6);" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reset Password</title>
+  <link rel="stylesheet" href="/styles/auth.css" />
+</head>
 
-          <input 
-            type="password" 
-            placeholder="New Password" 
-            class="input-field" 
-            required 
-          />
+<body>
+  <div class="main-container">
+    <div class="auth-container">
 
-          <input 
-            type="password" 
-            placeholder="Confirm New Password" 
-            class="input-field" 
-            required 
-          />
+      <h1 class="auth-title">Reset Password</h1>
+      <p class="auth-subtitle">Enter the OTP and your new password</p>
 
-          <button type="submit" class="primary-btn">Reset Password</button>
-        </form>
+      <form action="/reset-password" method="POST" class="auth-form">
+        <input type="number" class="reset-passowrd-otp" placeholder="ENTER OTP" maxlength="6"
+          oninput="if(this.value.length > 6) this.value = this.value.slice(0,6);" />
 
-       
-        <div class="auth-bottom">
-          <p class="bottom-text">Back to</p>
-          <a href="/login" class="link-btn">Log in</a>
-        </div>
+        <input type="password" placeholder="New Password" class="input-field" required />
+
+        <input type="password" placeholder="Confirm New Password" class="input-field" required />
+
+        <button type="submit" class="primary-btn">Reset Password</button>
+      </form>
+
+
+      <div class="auth-bottom">
+        <p class="bottom-text">Back to</p>
+        <a href="/login" class="link-btn">Log in</a>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
