login verification done

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,8 +15,8 @@
       <p class="auth-subtitle">Enter your details below</p>
 
       <form action="/login" method="POST" class="auth-form">
-        <input type="email" class="input-field" placeholder="Email" />
-        <input type="password" class="input-field" placeholder="Password" />
+        <input type="email" class="input-field" name="email" placeholder="Email" />
+        <input type="password" class="input-field"  name="password" placeholder="Password" />
 
         <div class="auth-actions">
           <button type="submit" class="primary-btn">LOGIN</button>
