--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,7 +15,11 @@
       <p class="auth-subtitle">Enter your details below</p>
 
       <form action="/login" method="POST" class="auth-form">
-        <input type="email" class="input-field" name="email" placeholder="Email" />
+        <% if(typeof error !== 'undefined') { %>
+        <div class="error-message"><%=error%></div>
+        <% } %>
+
+        <input type="email" class="input-field" name="email" placeholder="Email"  />
         <input type="password" class="input-field"  name="password" placeholder="Password" />
 
         <div class="auth-actions">
