forgot password creating new otp done

--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -15,8 +15,13 @@
       <h1 class="forgotpassword-title">Forgot Password</h1>
       <p class="forgotpassword-subtitle">Enter your email to reset your password</p>
 
-      <form action="/forgot-password" method="POST" class="auth-form">
-        <input type="email" placeholder="Email" class="forgotpassword-field" required />
+      <form action="/forgotpassword" method="POST" class="auth-form">
+        <input type="email" placeholder="Email" name="email" class="forgotpassword-field" required />
+           <% if (typeof error !=="undefined" ) { %>
+                    <p class="otp-error" style="color:red; margin-top:5px;">
+                        <%= error %>
+                    </p>
+                    <% } %>
 
         <button type="submit" class="primary-btn">Reset Password</button>
       </form>
