--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -24,7 +24,7 @@
 
         <div class="auth-actions">
           <button type="submit" class="primary-btn">LOGIN</button>
-          <p class="forgot-password">Forgot Password?</p>
+          <a href="/forgotpassword" class="forgot-password">Forgot Password?</a>
         </div>
       </form>
 
