--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -15,16 +15,26 @@
       <h1 class="auth-title">Reset Password</h1>
       <p class="auth-subtitle">Enter the OTP and your new password</p>
 
-      <form action="/reset-password" method="POST" class="auth-form">
-        <input type="number" class="reset-passowrd-otp" placeholder="ENTER OTP" maxlength="6"
+      <form action="/resetpassword" method="POST" class="auth-form">
+        <input type="hidden" name="email" value="<%- email %>">
+
+        <input type="number" name="otp" class="reset-passowrd-otp" placeholder="ENTER OTP" maxlength="6"
           oninput="if(this.value.length > 6) this.value = this.value.slice(0,6);" />
 
-        <input type="password" placeholder="New Password" class="input-field" required />
+        <input type="password" placeholder="New Password" name="password" class="input-field" required />
 
         <input type="password" placeholder="Confirm New Password" class="input-field" required />
 
         <button type="submit" class="primary-btn">Reset Password</button>
       </form>
+
+      <div class="resend-otp">
+        <form action="/resendPasswordOtp" method="POST">
+          <input type="hidden" name="email" value="<%= email %>">
+          <button id="resendBtn" class="resendButton" type="submit" disabled>Resend OTP </button>
+        </form>
+        <span id="timer"> in 00:30</span>
+      </div>
 
 
       <div class="auth-bottom">
@@ -33,6 +43,41 @@
       </div>
     </div>
   </div>
+
+   <script>
+
+        let duration = 30
+        const btn = document.getElementById('resendBtn')
+        const timerSpan = document.getElementById('timer')
+
+        let endTime = localStorage.getItem('otpEndTime')
+
+        if (!endTime || Date.now() > endTime) {
+            endTime = Date.now() + duration * 1000;
+            localStorage.setItem("otpEndTime", endTime);
+        }
+
+        function updateTimer() {
+            let remaining = Math.floor((endTime - Date.now()) / 1000);
+
+            if (remaining > 0) {
+                btn.disabled = true;
+                timerSpan.textContent = " in 00:" + (remaining < 10 ? "0" : "") + remaining;
+            } else {
+                btn.disabled = false;
+                timerSpan.textContent = "";
+                clearInterval(countDown);
+                localStorage.removeItem("otpEndTime");
+            }
+        }
+
+        updateTimer();
+        let countDown = setInterval(updateTimer, 1000);
+
+
+    </script>
+
+
 </body>
 
 </html>
