--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -294,4 +294,34 @@ input[type="number"]::-webkit-outer-spin-button {
   justify-content: center;
 }
 
+.admin-title {
+  text-align:center ;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #222;
+}
 
+.admininput-field {
+  width: 100%;
+  padding: 12px 14px;
+  margin-bottom: 16px;
+  font-size: 14px;
+  transition: all 0.2s ease-in-out;
+  box-shadow: none;
+  background: transparent;
+  border-radius: 6px;
+  border:solid 1px gray
+}
+
+.pawsome-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center;     
+     
+}
+.pawsome-icon{
+  height: 110px;
+   margin-bottom: 16px;
+   
+}
