--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/layout.css">
 </head>
 <body>
-    <h1>dashboadr</h1>
+   <%- include('../partials/admin/sidebar') %>
 </body>
 </html>
