user logout done

--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - User Management</title>
     <link rel="stylesheet" href="/styles/layout.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -20,7 +22,7 @@
                         <button class="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</button>
                     </div>
                 </header>
-               <button class="filter"><i class="fa-solid fa-filter"></i>Filter</button> 
+                <button class="filter"><i class="fa-solid fa-filter"></i>Filter</button>
                 <section class="table-container">
                     <table class="user-table">
                         <thead>
@@ -40,10 +42,10 @@
                                 <td>John Doe</td>
                                 <td>john@example.com</td>
                                 <td class="unblocked">Active</td>
-                                 <td>2025-01-15</td>
+                                <td>2025-01-15</td>
                                 <td>
                                     <button class="block">BLOCK</button>
-                                  
+
                                 </td>
                             </tr>
                             <tr>
