admin logout done

--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -20,6 +20,7 @@
         <li><a href="#">Order Management</a></li>
         <li><a href="#">Category Management</a></li>
         <li><a href="#">Coupon Management</a></li>
+         <li><a href="/admin/logout">Logout</a></li>
       </ul>
     </aside>
 </body>
