--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -36,10 +36,10 @@
                 </div>
           </form>
 
-          <button class="google-btn">
+          <a href="/auth/google"><button class="google-btn">
             <img src="/img/google.png" alt="Google" class="google-icon" />
             Log in with Google
-          </button>
+          </button></a>
 
           <div class="auth-bottom">
             <p class="bottom-text">Don’t have an account?</p>
